force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Is_Booked__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system selects this checkbox to indicate that the Deposit is booked. By default, this checkbox is deselected.</description>
    <inlineHelpText>When selected, this checkbox indicates that the Deposit is booked.</inlineHelpText>
    <label>Is Booked</label>
    <type>Checkbox</type>
</CustomField>