force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Maximum_Rate_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Maximum_Rate_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and can be collected as part of a workflow. If true, a rate ceiling applies on the account.</description>
    <inlineHelpText>If true a rate ceiling applies on the account.</inlineHelpText>
    <label>Maximum Rate Indicator</label>
    <type>Checkbox</type>
</CustomField>