force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Minimum_Rate_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Minimum_Rate_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and can be collected as part of a workflow. If true, a rate floor applies to the account.</description>
    <inlineHelpText>If true a rate floor applies to the account.</inlineHelpText>
    <label>Minimum Rate Indicator</label>
    <type>Checkbox</type>
</CustomField>