force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Notes__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Notes__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It is a free form text field used to add notes or details to the deposit record.</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>