force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Originating_Branch__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Originating_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field associates a deposit account to the branch which it was originated in. This field is set during the deposit origination workflow.</description>
    <label>Originating Branch</label>
    <referenceTo>LLC_BI__Branch__c</referenceTo>
    <relationshipLabel>Deposits</relationshipLabel>
    <relationshipName>Deposits</relationshipName>
    <type>Lookup</type>
</CustomField>