force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Overdraft_Consent_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Overdraft_Consent_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and can be collected as part of a workflow. If true, consent to pay overdrafts out of the account is given.</description>
    <inlineHelpText>If true consent to pay overdrafts out of the account is being given.</inlineHelpText>
    <label>Overdraft Consent Indicator</label>
    <type>Checkbox</type>
</CustomField>