force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Overdraft_Services__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Overdraft_Services__c</fullName>
    <description>This optional picklist field is manually populated during deposit origination and indicates if the applicant would like overdraft services.</description>
    <label>Overdraft Services</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opt-In</fullName>
            </value>
            <value>
                <fullName>Opt-Out</fullName>
            </value>
            <value>
                <fullName>No Decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>