force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Owner_Deceased_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Owner_Deceased_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and can be collected as part of a workflow. If true, the party passed as the Owner of the IRA is deceased. It is typically used in situations where the IRA owner has died but a formal beneficiary IRA has not been created.</description>
    <inlineHelpText>If true the party passed as the Owner of the IRA is deceased. Typically used in connection with situations where the IRA Owner has died but a formal Beneficiary IRA has not been created.</inlineHelpText>
    <label>Owner Deceased Indicator</label>
    <type>Checkbox</type>
</CustomField>