force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Periodic_Change_Limit_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Periodic_Change_Limit_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and can be collected as part of a workflow. If true, there is a limit to the amount that a variable rate can change over successive specified periods.</description>
    <inlineHelpText>If true there is a limit to the amount that a variable rate can change over successive specified periods.</inlineHelpText>
    <label>Periodic Change Limit Indicator</label>
    <type>Checkbox</type>
</CustomField>