force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Prevent_Automatic_Renewal__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Prevent_Automatic_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and can be collected as part of a workflow. If true, the owner of the account that would otherwise automatically renew has determined at account opening to prevent renewals.</description>
    <inlineHelpText>If true the owner of the account that would otherwise automatically renew has determined at account opening to prevent renewals.</inlineHelpText>
    <label>Prevent Automatic Renewal</label>
    <type>Checkbox</type>
</CustomField>