force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Product__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. This field is a picklist that allows the user to specify what product the deposit is associated with.</description>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal Savings</fullName>
                <default>true</default>
                <label>Personal Savings</label>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>