force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Product_Line__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Line__c</fullName>
    <description>This field is requied. It is either automatically set or manually collected as part of the New Deposit Workflow. This field is a picklist that allows the user to specify what product line the deposit is associated with.</description>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal Banking</fullName>
                <default>true</default>
                <label>Personal Banking</label>
            </value>
            <value>
                <fullName>Commercial Banking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>