force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Product_Reference__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is required and is collected during the New Deposit Workflow. This field is a lookup to the product, used to specify which product the deposit is associated with.</description>
    <label>Product</label>
    <referenceTo>LLC_BI__Product__c</referenceTo>
    <relationshipLabel>Deposits</relationshipLabel>
    <relationshipName>Deposits</relationshipName>
    <type>Lookup</type>
</CustomField>