force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Product_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Type__c</fullName>
    <description>This field is required and is collected during the New Deposit Workflow. This field is a picklist that allows the user to specify what product type the deposit is associated with.</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CD</fullName>
                <default>true</default>
                <label>CD</label>
            </value>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Money Market</fullName>
            </value>
            <value>
                <fullName>Safe Deposit Box</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>