force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Related_Deposit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Related_Deposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional although it is automatically set during the CD Renewal Workflow. This field associates two deposit accounts.</description>
    <label>Related Deposit</label>
    <referenceTo>LLC_BI__Deposit__c</referenceTo>
    <relationshipLabel>Related Deposits</relationshipLabel>
    <relationshipName>Related_Deposits</relationshipName>
    <type>Lookup</type>
</CustomField>