force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Term_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Term_Type__c</fullName>
    <description>This picklist field is required for CD&apos;s and is manually populated. The picklist values are the time periods used to describe the length of a certificate term. It is used in conjunction with the number field that specifies the number of terms.</description>
    <label>Term Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>day(s)</fullName>
            </value>
            <value>
                <fullName>month(s)</fullName>
            </value>
            <value>
                <fullName>quarter(s)</fullName>
            </value>
            <value>
                <fullName>year(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>